tests/results/test.main.sh.bash.err
/home/adrien/devel/system_tools/ammlib/tests/../lib/log.lib: line 15: syntax error: unexpected end of file
