tests/results/test.functions.sh.ksh.res
	Command being timed: "/usr/bin/ksh /home/adrien/devel/system_tools/ammlib/tests/test.functions.sh"
	User time (seconds): 0.00
	System time (seconds): 0.00
	Percent of CPU this job got: 16%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:00.00
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 3544
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 17
	Minor (reclaiming a frame) page faults: 145
	Voluntary context switches: 20
	Involuntary context switches: 1
	Swaps: 0
	File system inputs: 4016
	File system outputs: 8
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 0
